creation of uwsgi successful, further configartion will be tested. python application successfuly containarized

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,9 @@ name = "pypi"
 flask = "*"
 python-dotenv = "*"
 flask-expects-json = "*"
-asyncio = "*"
+
+uwsgi = "*"
+wheel = "*"
 
 [dev-packages]
 pytest = "*"
