setting up uwsgi

--- a/app.ini
+++ b/app.ini
@@ -1,13 +1,13 @@
 [uwsgi]
 
 
-# remember to send http to socket for production and nginx 
-http = 0.0.0.0:5000
+# remember to send http to socket for production and nginx
+http = 0.0.0.0:3001
 
 processes = 4
 threads = 2
 stats = 0.0.0.0:9191
 
-chdir = ./api
+chdir = .
 callable = app
-wsgi-file = ./app.py
+wsgi-file = ./api/app.py
