fixed docker bug

--- a/app.ini
+++ b/app.ini
@@ -8,6 +8,6 @@ processes = 4
 threads = 2
 stats = 0.0.0.0:9191
 
-chdir = .
+chdir = ./api
 callable = app
-wsgi-file = ./api/app.py
+wsgi-file = app.py
